--- a/public/tuiter/explore/index.css
+++ b/public/tuiter/explore/index.css
@@ -1,123 +1,67 @@
-
-.col-2 {
-    margin: 10px;
-    padding-top: 10px;
+#left {
+    margin-top: 10px;
 }
 
-.col-6 {
-    margin: 10px;
+#left span {
+    float: left;
 }
 
-.col-6 label.mag {
+#left span.adjust {
+    float: left;
+    padding-left: 8px;
+}
+
+#mid {
+    margin-top: 10px;
     position: relative;
-    top: -50px;
-    left: 20px;
 }
 
-.col-6 label.gear {
-    position:relative;
-    top:-48px;
-    left: 580px;
-    color: blue;
-    font-size: 25px;
+#mid form input {
+    width: 95%;
+    padding-left: 6%;
 }
 
-.col-6 input {
-    width: 90%;
-    margin: 10px;
-    padding-left: 35px;
+#mid form label.mag {
+    position: absolute;
+    left: 3.5%;
+    top:0.5%;
+    font-size: large;
 }
 
-.col-6 ul {
-    width: 100%;
-    position: relative;
-    top: -50px;
+#mid form label.gear {
+    position: absolute;
+    left: 95%;
+    top: 0.5%;
+    font-size: large;
+    color: blue
 }
 
-.col-6 div.image {
-    position: relative;
-    top: -30px;
+#mid p.textinpic {
+    position: absolute;
+    top:42%;
+    left: 4%;
+    color:white;
+    font-size: 30px;
 }
 
-.col-6 ul.adjust {
-    border-radius: 0px 0px 5px 5px;
-}
-
-.col-6 p span.first {
-    color: grey;
-}
-
-.col-6 p span.second {
-    font-size: 17px;
-}
-
-.col-6 p i {
-    padding-left: 5px;
-}
-
-
-.col-6 p span.third {
-    font-size: 15px;
-    color: grey;
-}
-
-.col-6 ul img.first {
-    position: relative;
-    top: 30px;
-}
-
-.col-6 ul img.second {
-    position: relative;
-    top: 30px;
-}
-
-.col-6 ul img.third {
-    position: relative;
-    top: 20px;
-}
-
-.col-6 ul img.fourth {
-    position: relative;
-    top: 30px;
+#mid ul img {
+    width: 80%;
+    height: 70%;
 }
 
 #right {
-    margin:10px;
-}
-
-#right li.adjust {
-    height: 65px;
-}
-
-#right img.first {
     position: relative;
-    top: -10px;
-    left: -15px;
+    margin-top: 10px;
 }
 
-#right div.col-5 {
-    width: 160px;
+#right button {
+    position: absolute;
+    right: 3%;
 }
 
-#right div.col-5 span.first-row {
+#right i.adjust {
+    float: left;
+    padding-left: 2px;
     position: relative;
-    left: -20px;
-    font-size: 15px;
-}
-
-#right div.col-5 span.second-row {
-    color: grey;
-    position: relative;
-    left: -20px;
-    font-size: 15px;
-}
-
-#right div.col {
-    position: relative;
-    right: -10px;
-    top: 5px;
-}
-
-#right div.col button.size {
-    font-size: 12px;
+    top: 10%;
 }
